force-app/main/default/objects/Zuora__ZInvoice__c/fields/First_Bill__c.field-meta.xml
<CustomField>
    <fullName>First_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates first bill on the account. All first bills receive a snail mail and email copy of their first bill.</description>
    <inlineHelpText>Indicates first bill on the account. All first bills receive a snail mail and email copy of their first bill.</inlineHelpText>
    <label>First Bill</label>
    <type>Checkbox</type>
</CustomField>