force-app/main/default/objects/Zuora__ZInvoice__c/fields/Legacy_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Invoice_Id__c</fullName>
    <inlineHelpText>The Account Bill Id if the invoice is from the historical migration</inlineHelpText>
    <label>Legacy Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>