force-app/main/default/objects/Zuora__ZInvoice__c/fields/LetterStream_Insert__c.field-meta.xml
<CustomField>
    <fullName>LetterStream_Insert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is populated with an insert record, the file will be mailed and emailed along with the Invoice PDF</inlineHelpText>
    <label>LetterStream Insert</label>
    <referenceTo>LetterStream_Insert__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>