force-app/main/default/objects/Zuora__ZInvoice__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <formula>IF( NOT( ISBLANK(Bill_Document_Content_Version_ID__c) ) &amp;&amp; $Label.Company_Name = &apos;BlueWave&apos;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp;Bill_Document_Content_Version_ID__c,&quot;View Statement&quot;,&quot;_self&quot;),  
IF(NOT( ISBLANK(Bill_Document_Content_Version_ID__c) ) &amp;&amp; $Label.Company_Name &lt;&gt; &apos;BlueWave&apos;, HYPERLINK($Label.Customer_Member_Portal_URL + &quot;sfc/servlet.shepherd/version/download/&quot;&amp;Bill_Document_Content_Version_ID__c,&quot;View Statement&quot;,&quot;_self&quot;), &quot;Statement Coming Soon&quot;)  )</formula>
    <label>Statement</label>
    <type>Text</type>
</CustomField>